--- a/breathecam.org/www/assets/stylesheets/breathecam3.css
+++ b/breathecam.org/www/assets/stylesheets/breathecam3.css
@@ -25,8 +25,16 @@
   left: 20px;
 }
 
+#textTitlesDiv {
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  margin-left: 100px;
+}
+
 #textTitleCalendar, #textTitleLocation {
   z-index: 16;
+  margin: 10px;
 }
 
 #location_toggle, .location_thumbnail_container {
